--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "ffmpeg-static": "^5.2.0"
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -22,6 +23,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.11.14",
     "@types/ffmpeg-static": "^2.0.1",
+    "@types/fluent-ffmpeg": "^2.1.25",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
